--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,10 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+numpy = "*"
+opencv = "*"
+python-opencv = "*"
+opencv-python = "*"
 
 [requires]
 python_version = "3.7"
